	* Use of themeblvd_get_part() now deprecated; all instances of `get_template_part()` replaced with new `themeblvd_get_template_part()` wrapper function.
	* Better handling of adding "Sidebar Layout" selection to "Page Attributes" meta box on Edit Page screen, and improved security when saving.
	* Improved security for saving meta boxes using `Theme_Blvd_Meta_Box` class.
* Fixed: TinyMCE toolbar's dropdown menus not showing when the using Visual Editor within Theme Blvd Layout Builder.
* **Important:** If you have [template part files](http://dev.themeblvd.com/tutorial/template-parts-framework-2-5/) in your child theme, they MUST be moved into a directory named `template-parts`.

--------------------------------------------------------------

2.1.11 - 08/07/2017
-------------------

* **Updated Theme Blvd framework to 2.6.10**
* Fixed: "Iframe" 16:9 lightbox type getting applied where it shouldn't.

--------------------------------------------------------------

2.1.10 - 08/03/2017
-------------------

* **Updated Theme Blvd framework to 2.6.9**
* Fixed: Image `srcset` property not getting printed out when featured image is linked to lightbox.
* Fixed: Minor admin styling issues with WordPress 4.8+.
* Fixed: Minor broken image links in CSS for Executive and Superuser bases.
* Fixed: Ajax errors in some combinations of third-party plugins, WooCommerce, and the theme.
* Fixed: Deprecated notices in theme's "catalog view" display for WooCommerce products.

--------------------------------------------------------------

--------------------------------------------------------------

2.1.9 - 05/31/2017
------------------

* **Updated Theme Blvd framework to 2.6.8**
* New: Added option at *Appearance > Theme Options > Content > Blog Homepage* to set a separate post display for the blog homepage or "posts page."
* Improvement: On pages where WooCommerce floating cart isn't supported (like checkout and cart page, itself), the cart icon now links to the cart page.